35.k8s/docker_practice_25_march/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nextjs
  labels:
    name: nextjspod1
spec:
  containers:
  - name: nextjs
    image: nginx
    ports:
      - containerPort: 80
