35.k8s/docker_practice_25_march/svc-pods.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysvc
spec:
  selector:
    name: nextjspod1
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
